--- a/ex7/softapp/static/contact.html
+++ b/ex7/softapp/static/contact.html
@@ -23,7 +23,7 @@
   <section class="contact">
     <h2>Get in Touch</h2>
     <p>📍 Location: 123 Food Street, Krishnagirii</p>
-    <p>📞 Phone: +91 </p>
+    <p>📞 Phone: +917904204526 </p>
     <p>✉️ Email: info@tasteRestaurant.com</p>
 
     <h3>Reserve a Table</h3>
